test_regress/t/t_fsmmulti_same_bad.out
%Warning-COVERIGN: t/t_fsmmulti_same_bad.v:33:5: Ignoring unsupported: FSM coverage on multiple supported case statements found in the same always block. Only the first candidate will be instrumented.
   33 |     case (state)
      |     ^~~~
                   t/t_fsmmulti_same_bad.v:28:7: ... Location of first supported candidate for 't.state'
   28 |       case (state)
      |       ^~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
